--- a/Docs/package.json
+++ b/Docs/package.json
@@ -26,7 +26,7 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-simple-sidebar.git"
     },
     "dependencies": {
-        "bootstrap": ">=4.1.2",
+        "bootstrap": "4.0.0",
         "jquery": "3.3.1"
     },
     "devDependencies": {
